# bluepill-blinky

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.gdb  openocd-stm32f103.cfg
blinky/: CMakeLists.txt
blinky/include/: FreeRTOSConfig.h  bluepill.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
blinky/src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c
toolchain/: STM32F103VB_FLASH.ld  stm32f103.cmake
